[metadata]
name = pyhive-integration
description = A Python library to interface with the Hive API
keywords = Hive API Library
license = MIT
author = KJonline24
author_email = khole_47@icloud.com
url = https://github.com/Pyhive/pyhiveapi
project_urls =
    Source = https://github.com/Pyhive/Pyhiveapi
    Issue tracker = https://github.com/Pyhive/Pyhiveapi/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    apyhiveapi = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = .
include = apyhiveapi*

[build-system]
requires = ["setuptools>=40.6.2", "wheel", "unasync"]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[settings]
multi_line_output = 3
include_trailing_comma = True
known_third_party = aiohttp,boto3,botocore,pyquery,requests,setuptools,six,urllib3

[tool.isort]
profile = "black"


[flake8]
exclude = .git,lib,deps,build,test
doctests = True
# To work with Black
# E501: line too long
# D401: mood imperative
# W503: line break before binary operator
ignore =
    E501,
    D401,
    W503


[mypy]
python_version = 3.10
show_error_codes = true
ignore_errors = true
follow_imports = silent
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

